/*
 * Copyright 2021 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package quilkin.filters.compress.v1alpha1;

message Compress {
  enum Mode {
    Snappy = 0;
    Lz4 = 1;
  }

  message ModeValue { Mode value = 1; }

  enum Action {
    DoNothing = 0;
    Compress = 1;
    Decompress = 2;
  }

  message ActionValue { Action value = 1; }

  ModeValue mode = 1;
  ActionValue on_read = 2;
  ActionValue on_write = 3;
}
